--- a/TianTianXinForMerchant/Mine/AssociatedStore/AssociatedOrderViewController.xib
+++ b/TianTianXinForMerchant/Mine/AssociatedStore/AssociatedOrderViewController.xib
@@ -1,9 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AssociatedOrderViewController">
@@ -19,30 +23,30 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xUD-Ca-8eb">
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xUD-Ca-8eb">
                     <rect key="frame" x="0.0" y="64" width="320" height="45"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HZz-ZU-Uhv">
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HZz-ZU-Uhv">
                             <rect key="frame" x="0.0" y="0.0" width="106.5" height="45"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_pulldown" translatesAutoresizingMaskIntoConstraints="NO" id="Rw8-Mk-HO9">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="icon_pulldown" translatesAutoresizingMaskIntoConstraints="NO" id="Rw8-Mk-HO9">
                                     <rect key="frame" x="84" y="19" width="12" height="7"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="12" id="2dH-2w-jx7"/>
                                         <constraint firstAttribute="height" constant="7" id="67F-5q-OHy"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全部店铺" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8A-6A-rRl">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="全部店铺" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S8A-6A-rRl">
                                     <rect key="frame" x="8" y="14" width="71.5" height="18"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="Rw8-Mk-HO9" firstAttribute="leading" secondItem="S8A-6A-rRl" secondAttribute="trailing" constant="5" id="FII-vz-ZX9"/>
                                 <constraint firstItem="S8A-6A-rRl" firstAttribute="leading" secondItem="HZz-ZU-Uhv" secondAttribute="leading" constant="8" id="Vz7-fy-xUH"/>
@@ -53,41 +57,41 @@
                                 <constraint firstItem="Rw8-Mk-HO9" firstAttribute="centerY" secondItem="HZz-ZU-Uhv" secondAttribute="centerY" id="vpe-kC-yMf"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gge-oX-oqM">
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gge-oX-oqM">
                             <rect key="frame" x="213" y="0.0" width="106.5" height="45"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥ 0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EtV-Ir-anY">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="¥ 0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EtV-Ir-anY">
                                     <rect key="frame" x="0.0" y="14" width="101.5" height="17"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="EtV-Ir-anY" firstAttribute="leading" secondItem="Gge-oX-oqM" secondAttribute="leading" id="Gfs-Bk-4Xi"/>
                                 <constraint firstAttribute="trailing" secondItem="EtV-Ir-anY" secondAttribute="trailing" constant="5" id="SMM-TB-9gW"/>
                                 <constraint firstItem="EtV-Ir-anY" firstAttribute="centerY" secondItem="Gge-oX-oqM" secondAttribute="centerY" id="rcy-Na-We1"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dcy-eQ-wYZ">
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dcy-eQ-wYZ">
                             <rect key="frame" x="107" y="0.0" width="106.5" height="45"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_pulldown" translatesAutoresizingMaskIntoConstraints="NO" id="VgL-S8-qdm">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="icon_pulldown" translatesAutoresizingMaskIntoConstraints="NO" id="VgL-S8-qdm">
                                     <rect key="frame" x="79" y="19" width="12" height="7"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="12" id="qO3-SY-uTw"/>
                                         <constraint firstAttribute="height" constant="7" id="uNc-cM-DWI"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全部时间" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1m-kH-xDC">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="全部时间" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1m-kH-xDC">
                                     <rect key="frame" x="5" y="12" width="69" height="19.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="x1m-kH-xDC" firstAttribute="leading" secondItem="dcy-eQ-wYZ" secondAttribute="leading" constant="5" id="07G-Kb-UIg"/>
                                 <constraint firstItem="VgL-S8-qdm" firstAttribute="centerY" secondItem="dcy-eQ-wYZ" secondAttribute="centerY" id="GRs-rh-Wsg"/>
@@ -96,9 +100,9 @@
                                 <constraint firstItem="VgL-S8-qdm" firstAttribute="leading" secondItem="x1m-kH-xDC" secondAttribute="trailing" constant="5" id="i0h-ga-uZ4"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBw-yN-wMD">
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gBw-yN-wMD">
                             <rect key="frame" x="0.0" y="44" width="320" height="1"/>
-                            <color key="backgroundColor" red="0.80784313730000001" green="0.80784313730000001" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.80784313730000001" green="0.80784313730000001" blue="0.80784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="H8g-WD-1VF"/>
                             </constraints>
@@ -124,16 +128,16 @@
                         <constraint firstAttribute="height" constant="45" id="yC2-c0-5Nq"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="npH-qn-H6M">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="npH-qn-H6M">
                     <rect key="frame" x="0.0" y="109" width="320" height="371"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="tkj-yQ-9Ip"/>
                         <outlet property="delegate" destination="-1" id="egk-tz-Hp7"/>
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="npH-qn-H6M" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="AuU-Vm-vBt"/>
                 <constraint firstItem="npH-qn-H6M" firstAttribute="top" secondItem="xUD-Ca-8eb" secondAttribute="bottom" id="CDh-sE-r6g"/>
@@ -143,7 +147,6 @@
                 <constraint firstAttribute="trailing" secondItem="npH-qn-H6M" secondAttribute="trailing" id="fYh-Bg-4s7"/>
                 <constraint firstAttribute="trailing" secondItem="xUD-Ca-8eb" secondAttribute="trailing" id="woL-4e-5DY"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="318" y="133"/>
         </view>
     </objects>
